# MIPT-summer-school

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README.md  equ.cpp  equation.c  main.cpp  test
My-string-functions/: README.md  main.cpp  mstring.cpp  mstring.h  mstring.h.gch  tests.cpp
Onegin/: CMakeCache.txt  CMakeLists.txt  Makefile  Onegin  a  cmake_install.cmake  main.cpp  onegin.cpp  onegin.h  output.txt  test.txt  tests.cpp  tests.h
Quadratic equation solver/: equation.cpp
Quadratic-equation-solver/: README.md  equation.cpp  equation.h  tests.cpp
